Problem 5: Added Get method

--- a/src/problem5/package.json
+++ b/src/problem5/package.json
@@ -6,11 +6,11 @@
         "start": "ts-node src/main.ts",
         "dev": "nodemon src/main.ts",
         "build": "tsc",
-        "typeorm": "typeorm-ts-node-commonjs",
+        "typeorm": "typeorm-ts-node-commonjs -d src/config/typeorm.config.ts",
         "migration:create": "npm run typeorm migration:create ./src/migrations/%npm_config_name%",
         "migration:generate": "npm run typeorm migration:generate ./src/migrations/",
-        "migration:run": "npm run typeorm migration:run -d ./src/config/ormconfig.ts",
-        "migration:revert": "npm run typeorm migration:revert -d ./src/config/typeorm.config.ts",
+        "migration:run": "npm run typeorm migration:run ",
+        "migration:revert": "npm run typeorm migration:revert ",
         "format": "prettier --write \"src/**/*.{ts,js,json}\"",
         "format:check": "prettier --check \"src/**/*.{ts,js,json}\""
     },
