--- a/src/problem5/package.json
+++ b/src/problem5/package.json
@@ -24,8 +24,11 @@
         "class-validator": "^0.14.1",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "express-validator": "^7.2.1",
         "mysql2": "^3.12.0",
         "reflect-metadata": "^0.2.2",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.0",
         "typeorm": "^0.3.20"
     },
     "devDependencies": {
@@ -33,6 +36,8 @@
         "@types/dotenv": "^6.1.1",
         "@types/express": "^5.0.0",
         "@types/node": "^22.10.5",
+        "@types/swagger-jsdoc": "^6.0.4",
+        "@types/swagger-ui-express": "^4.1.6",
         "globals": "^15.14.0",
         "nodemon": "^3.1.9",
         "prettier": "^3.2.5",
